checked the og-image issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       content="Custom corrugated boxes, master cartons and export-ready packaging solutions by M & M Packers."
     />
     <meta property="og:image"
-      content="https://yourdomain.com/og-image.jpg"
+      content="https://mmpackers.vercel.app/og-image.jpg"
     />
     <meta property="og:type" content="website" />
 
