google console verification

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     />
     <meta property="og:type" content="website" />
 
+    <meta name="google-site-verification" content="1NWeMMYGNCtZJnsb0OItUClhibyOiNzRA1ldbGqdbcI" />
+
   </head>
   <body>
     <div id="root"></div>
