Update domain references for production

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="canonical" href="https://your-domain.com/" />
+    <link rel="canonical" href="https://mmpackers.com/" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,6 +14,7 @@
     <meta name="description"
       content="M & M Packers is a corrugated boxes manufacturer supplying custom, industrial and export-ready packaging solutions across North India."
     />
+    <meta property="og:url" content="https://mmpackers.com/" />
 
     <meta property="og:title"
       content="Corrugated Packaging Manufacturer – M & M Packers"
@@ -22,8 +23,11 @@
       content="Custom corrugated boxes, master cartons and export-ready packaging solutions by M & M Packers."
     />
     <meta property="og:image"
-      content="https://mmpackers.vercel.app/og-image.jpg"
+      content="https://mmpackers.com/og-image.jpg"
     />
+
+    <meta property="og:site_name" content="M & M Packers" />
+
     <meta property="og:type" content="website" />
 
     <meta name="google-site-verification" content="1NWeMMYGNCtZJnsb0OItUClhibyOiNzRA1ldbGqdbcI" />
